--- a/Student-Productivity/src/index.html
+++ b/Student-Productivity/src/index.html
@@ -5,7 +5,10 @@
   <title>StudentProductivity</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <app-root></app-root>
